[project]
name = "alyx-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.0",
    "matplotlib>=3.9.2",
    "mypy-boto3-s3>=1.36.21",
    "one-api>=2.11.0",
    "rich>=13.9.4",
    "smbprotocol>=1.14.0",
    "tqdm>=4.66.6",
]
